add data code C#

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     <p>A number system with its base as eight and uses digits from 0 to 7 is called Octal Number System. The word octal is used to represent the numbers that have eight as the base. The octal numbers have many applications and importance such as it is used in computers and digital numbering systems. In the number system, octal numbers can be converted to binary numbers, binary numbers to octal numbers by first converting a binary number to decimal number then decimal number to octal number.</p>
                 </section>
 
-                <div class="code-container">
+                <div class="code-container my-5">
                     <p>
                         <button
                           class="e-button"
@@ -322,7 +322,7 @@
                             </code>
                         </div>
                       </div>
-                    </div>
+                </div>
 
                 <table class="table table-bordered" id="table-number-systems">
                     <thead>
@@ -337,27 +337,309 @@
                         <tr>
                             <td>0</td>
                             <td>0000</td>
-                            <td>0</td>
-                            <td>0</td>
+                            <td>00</td>
+                            <td>000</td>
                           </tr>
                         <tr>
                         <tr>
                             <td>1</td>
                             <td>0001</td>
-                            <td>1</td>
-                            <td>1</td>
+                            <td>01</td>
+                            <td>001</td>
                         </tr>
                         <tr>
                             <td>2</td>
                             <td>0010</td>
-                            <td>2</td>
-                            <td>2</td>
+                            <td>02</td>
+                            <td>002</td>
                         </tr>
                         <tr>
                             <td>3</td>
                             <td>0011</td>
-                            <td>3</td>
-                            <td>3</td>
+                            <td>03</td>
+                            <td>003</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>0100</td>
+                            <td>04</td>
+                            <td>004</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>0101</td>
+                            <td>05</td>
+                            <td>005</td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>0110</td>
+                            <td>06</td>
+                            <td>006</td>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td>0111</td>
+                            <td>07</td>
+                            <td>007</td>
+                        </tr>
+                        <tr>
+                            <td>8</td>
+                            <td>1000</td>
+                            <td>08</td>
+                            <td>010</td>
+                        </tr>
+                        <tr>
+                            <td>9</td>
+                            <td>1001</td>
+                            <td>09</td>
+                            <td>011</td>
+                        </tr>
+                        <tr>
+                            <td>10</td>
+                            <td>1010</td>
+                            <td>0A</td>
+                            <td>012</td>
+                        </tr>
+                        <tr>
+                            <td>11</td>
+                            <td>1011</td>
+                            <td>0B</td>
+                            <td>013</td>
+                        </tr>
+                        <tr>
+                            <td>12</td>
+                            <td>1100</td>
+                            <td>0C</td>
+                            <td>014</td>
+                        </tr>
+                        <tr>
+                            <td>13</td>
+                            <td>1101</td>
+                            <td>0D</td>
+                            <td>015</td>
+                        </tr>
+                        <tr>
+                            <td>14</td>
+                            <td>1110</td>
+                            <td>0E</td>
+                            <td>016</td>
+                        </tr>
+                        <tr>
+                            <td>15</td>
+                            <td>1111</td>
+                            <td>0F</td>
+                            <td>017</td>
+                        </tr>
+                        <tr>
+                            <td>16</td>
+                            <td>10000</td>
+                            <td>10</td>
+                            <td>020</td>
+                        </tr>
+                        <tr>
+                            <td>17</td>
+                            <td>10001</td>
+                            <td>11</td>
+                            <td>021</td>
+                        </tr>
+                        <tr>
+                            <td>18</td>
+                            <td>10010</td>
+                            <td>12</td>
+                            <td>022</td>
+                        </tr>
+                        <tr>
+                            <td>19</td>
+                            <td>10011</td>
+                            <td>13</td>
+                            <td>023</td>
+                        </tr>
+                        <tr>
+                            <td>20</td>
+                            <td>10100</td>
+                            <td>14</td>
+                            <td>024</td>
+                        </tr>
+                        <tr>
+                            <td>21</td>
+                            <td>10101</td>
+                            <td>15</td>
+                            <td>025</td>
+                        </tr>
+                        <tr>
+                            <td>22</td>
+                            <td>10110</td>
+                            <td>16</td>
+                            <td>026</td>
+                        </tr>
+                        <tr>
+                            <td>23</td>
+                            <td>10111</td>
+                            <td>17</td>
+                            <td>027</td>
+                        </tr>
+                        <tr>
+                            <td>24</td>
+                            <td>11000</td>
+                            <td>18</td>
+                            <td>030</td>
+                        </tr>
+                        <tr>
+                            <td>25</td>
+                            <td>11001</td>
+                            <td>19</td>
+                            <td>031</td>
+                        </tr>
+                        <tr>
+                            <td>26</td>
+                            <td>11010</td>
+                            <td>1A</td>
+                            <td>032</td>
+                        </tr>
+                        <tr>
+                            <td>27</td>
+                            <td>11011</td>
+                            <td>1B</td>
+                            <td>033</td>
+                        </tr>
+                        <tr>
+                            <td>28</td>
+                            <td>11100</td>
+                            <td>1C</td>
+                            <td>034</td>
+                        </tr>
+                        <tr>
+                            <td>29</td>
+                            <td>11101</td>
+                            <td>1D</td>
+                            <td>035</td>
+                        </tr>
+                        <tr>
+                            <td>30</td>
+                            <td>11110</td>
+                            <td>1E</td>
+                            <td>036</td>
+                        </tr>
+                        <tr>
+                            <td>31</td>
+                            <td>11111</td>
+                            <td>1F</td>
+                            <td>037</td>
+                        </tr>
+                        <tr>
+                            <td>32</td>
+                            <td>100000</td>
+                            <td>20</td>
+                            <td>040</td>
+                        </tr>
+                        <tr>
+                            <td>33</td>
+                            <td>100001</td>
+                            <td>21</td>
+                            <td>041</td>
+                        </tr>
+                        <tr>
+                            <td>34</td>
+                            <td>100010</td>
+                            <td>22</td>
+                            <td>042</td>
+                        </tr>
+                        <tr>
+                            <td>35</td>
+                            <td>100011</td>
+                            <td>23</td>
+                            <td>043</td>
+                        </tr>
+                        <tr>
+                            <td>36</td>
+                            <td>100100</td>
+                            <td>24</td>
+                            <td>044</td>
+                        </tr>
+                        <tr>
+                            <td>37</td>
+                            <td>100101</td>
+                            <td>25</td>
+                            <td>045</td>
+                        </tr>
+                        <tr>
+                            <td>38</td>
+                            <td>100110</td>
+                            <td>26</td>
+                            <td>046</td>
+                        </tr>
+                        <tr>
+                            <td>39</td>
+                            <td>100111</td>
+                            <td>27</td>
+                            <td>047</td>
+                        </tr>
+                        <tr>
+                            <td>40</td>
+                            <td>101000</td>
+                            <td>28</td>
+                            <td>050</td>
+                        </tr>
+                        <tr>
+                            <td>41</td>
+                            <td>101001</td>
+                            <td>29</td>
+                            <td>051</td>
+                        </tr>
+                        <tr>
+                            <td>42</td>
+                            <td>101010</td>
+                            <td>2A</td>
+                            <td>052</td>
+                        </tr>
+                        <tr>
+                            <td>43</td>
+                            <td>101011</td>
+                            <td>2B</td>
+                            <td>053</td>
+                        </tr>
+                        <tr>
+                            <td>44</td>
+                            <td>101100</td>
+                            <td>2C</td>
+                            <td>054</td>
+                        </tr>
+                        <tr>
+                            <td>45</td>
+                            <td>101101</td>
+                            <td>2D</td>
+                            <td>055</td>
+                        </tr>
+                        <tr>
+                            <td>46</td>
+                            <td>101110</td>
+                            <td>2E</td>
+                            <td>056</td>
+                        </tr>
+                        <tr>
+                            <td>47</td>
+                            <td>101111</td>
+                            <td>2F</td>
+                            <td>057</td>
+                        </tr>
+                        <tr>
+                            <td>48</td>
+                            <td>110000</td>
+                            <td>30</td>
+                            <td>060</td>
+                        </tr>
+                        <tr>
+                            <td>49</td>
+                            <td>110001</td>
+                            <td>31</td>
+                            <td>061</td>
+                        </tr>
+                        <tr>
+                            <td>50</td>
+                            <td>110010</td>
+                            <td>32</td>
+                            <td>062</td>
                         </tr>
                     </tbody>
                   </table>
