added currency functionality.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="list-item-underline"></span>
                 </li>
                 <li class="list-item">
-                    <a class="link" href="./math.html">Currency</a>
+                    <a class="link" href="./currency.html">Currency</a>
                     <span class="list-item-underline"></span>
                 </li>
             </ul>
@@ -663,17 +663,17 @@
             <div class="list-container">
                 <ul class="u-list">
                     <li class="list-item">
-                        <a class="list-anchor a-table">
+                        <a class="list-anchor a-table" href="./index.html">
                             <i class="fas fa-table"></i> Table
                         </a>
                     </li>
                     <li class="list-item">
-                        <a class="list-anchor a-university">
+                        <a class="list-anchor a-university" href="./math.html">
                             <i class="fas fa-university"></i> Math
                         </a>
                     </li>
                     <li class="list-item">
-                        <a class="list-anchor a-calculator">
+                        <a class="list-anchor a-calculator" href="./currency.html">
                             <i class="fas fa-calculator"></i> Currency
                         </a>
                     </li>
