--- a/math.html
+++ b/math.html
@@ -43,7 +43,7 @@
                     <span class="list-item-underline"></span>
                 </li>
                 <li class="list-item">
-                    <a class="link" href="./math.html">Currency</a>
+                    <a class="link" href="./currency.html">Currency</a>
                     <span class="list-item-underline"></span>
                 </li>
             </ul>
@@ -90,7 +90,12 @@
                             <label for="input" class="text-left w-100 pl-3 label-input-number">Enter number:</label>
                             <div class="input-group">
                                 <input type="number" class="form-control input-factorial-number" placeholder="Enter"/>
-                                <button class="e-button btn-convert btn-factorial-calculate" type="button">Calculate</button>
+                                <div class="input-group-append">
+                                    <button class="e-button btn-convert btn-factorial-calculate" type="button">Calculate</button>
+                                </div>
+                                
+                            </div>
+                            <div class="input-group">
                                 <label for="input" class="text-left w-100 pl-3 mt-2 label-input-number">Result:</label>
                                 <input type="text" class="form-control input-factorial-result" placeholder="Result" disabled readonly>
                             </div>
@@ -207,7 +212,12 @@
                             <label for="input" class="text-left w-100 pl-3 label-input-number">Enter number:</label>
                             <div class="input-group">
                                 <input type="number" class="form-control input-fibonacci-number" placeholder="Enter"/>
-                                <button class="e-button btn-convert btn-fibonacci-calculate" type="button">Calculate</button>
+                                <div class="input-group-append">
+                                    <button class="e-button btn-convert btn-fibonacci-calculate" type="button">Calculate</button>
+                                </div>
+                                
+                            </div>
+                            <div class="input-group">
                                 <label for="input" class="text-left w-100 pl-3 mt-2 label-input-number">Result:</label>
                                 <input type="text" class="form-control input-fibonacci-result" placeholder="Result" disabled readonly>
                             </div>
@@ -811,17 +821,17 @@
             <div class="list-container">
                 <ul class="u-list">
                     <li class="list-item">
-                        <a class="list-anchor a-table">
+                        <a class="list-anchor a-table" href="./index.html">
                             <i class="fas fa-table"></i> Table
                         </a>
                     </li>
                     <li class="list-item">
-                        <a class="list-anchor a-university">
+                        <a class="list-anchor a-university" href="./math.html">
                             <i class="fas fa-university"></i> Math
                         </a>
                     </li>
                     <li class="list-item">
-                        <a class="list-anchor a-calculator">
+                        <a class="list-anchor a-calculator" href="./currency.html">
                             <i class="fas fa-calculator"></i> Currency
                         </a>
                     </li>
