added new under menu, footer design and distance calculator in math template.

--- a/math.html
+++ b/math.html
@@ -46,13 +46,76 @@
                     <a class="link" href="./currency.html">Currency</a>
                     <span class="list-item-underline"></span>
                 </li>
+                <li class="list-item">
+                    <a class="link inspiration-link" href="#">Inspiration </a>
+                    <i class="fas fa-angle-down"></i>
+                    <i class="fas fa-angle-up"></i>
+                    <span class="list-item-underline"></span>
+                </li>
             </ul>
         </nav>
         <!-- Navbar -->
-        <div class="text-center e-header">Mathematical</div>
+        <div class="text-center e-header">Number Conversion</div>
         <div class="header-container-search">
             <input type="text" class="form-control search-input" placeholder="Search"/>
             <button class="btn-search"><i class="fas fa-search"></i></button>
+        </div>
+
+        <div class="navigation-under-container">
+            <div class="c-nav-under-container c-nav-under-container-1">
+                <h3 class="navigation-under-title">TU Gabrovo</h3>
+                <div class="navigation-under-title-line"></div>
+                <ul class="navigation-under-list">
+                    <li class="navigation-under-item">
+                        <a class="navigation-under-link" href="#">Awards</a>
+                        <i class="fas fa-caret-right"></i>
+                    </li>
+                    <li class="navigation-under-item">
+                        <a class="navigation-under-link" href="#">Cureer Center</a>
+                        <i class="fas fa-caret-right"></i>
+                    </li>
+                    <li class="navigation-under-item">
+                        <a class="navigation-under-link" href="#">Departments</a>
+                        <i class="fas fa-caret-right"></i>
+                    </li>
+                    <li class="navigation-under-item">
+                        <a class="navigation-under-link" href="#">Education</a>
+                        <i class="fas fa-caret-right"></i>
+                    </li>
+                    <li class="navigation-under-item">
+                        <a class="navigation-under-link" href="#">International Cooperation</a>
+                        <i class="fas fa-caret-right"></i>
+                    </li>
+                </ul>
+            </div>
+        
+            <div class="c-nav-under-container c-nav-under-container-2">
+                <h3 class="navigation-under-title">SoftUni Sofia</h3>
+                <div class="navigation-under-title-line"></div>
+                <ul class="navigation-under-list">
+                    <li class="navigation-under-item">
+                        <a class="navigation-under-link" href="#">Business Partners</a>
+                        <i class="fas fa-caret-right"></i>
+                    </li>
+                    <li class="navigation-under-item">
+                        <a class="navigation-under-link" href="#">Creativity</a>
+                        <i class="fas fa-caret-right"></i>
+                    </li>
+                    <li class="navigation-under-item">
+                        <a class="navigation-under-link" href="#">Developer Career</a>
+                        <i class="fas fa-caret-right"></i>
+                    </li>
+                    <li class="navigation-under-item">
+                        <a class="navigation-under-link" href="#">Forum</a>
+                        <i class="fas fa-caret-right"></i>
+                    </li>
+                    <li class="navigation-under-item">
+                        <a class="navigation-under-link" href="#">Sertifications</a>
+                        <i class="fas fa-caret-right"></i>
+                    </li>
+                   
+                </ul>
+            </div>
         </div>
     </header>
 
