--- a/index.html
+++ b/index.html
@@ -117,9 +117,13 @@
                 </ul>
             </div>
         </div>
+
     </header>
 
-    
+    <div class="my-toastr">
+        <div class="my-toast-header"></div>
+        <div class="toast-body">No Matches!</div>
+    </div>
 
     <main class="container-fluid">
         <h3 class="text-left my-4">Number Convertor</h3>
