--- a/math.html
+++ b/math.html
@@ -119,6 +119,11 @@
         </div>
     </header>
 
+    <div class="my-toastr">
+        <div class="my-toast-header"></div>
+        <div class="toast-body">No Matches!</div>
+    </div>
+
     <main class="container-fluid">
         <section class="factorial-container  my-5">
             <h3 class="text-left">Factorial (n!)</h3>
