added new html with Mocha browser testing!

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
                         <li>
                         <a class="dropdown-item" href="./forms.html">Forms</a>
                         </li>
+                        <li>
+                            <a class="dropdown-item" href="./mochaTest.html">Mocha</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
@@ -266,12 +269,12 @@
                     <div>3. Get the remainder for the hex digit.</div>
                     <p>4. Repeat the steps until the quotient is equal to 0.</p>
                     <div>Example 1</div>
-                    <div>Convert 3563<sub>10</sub> to hex</div>
-                    <div>3563 &#247; 16  = 2226 remainder 15 (F)</div>
+                    <div>Convert 35631<sub>10</sub> to hex</div>
+                    <div>35631 &#247; 16  = 2226 remainder 15 (F)</div>
                     <div>2226 &#247; 16  = 139 remainder 2 (2)</div>
                     <div>139 &#247; 16  = 8 remainder 11 (B)</div>
                     <div>8 &#247; 16  = 0 remainder 8 (8)</div>
-                    <p>So 3563<sub>10</sub> = 8B2F<sub>16</sub></p>
+                    <p>So 35631<sub>10</sub> = 8B2F<sub>16</sub></p>
                     <div>Example 2</div>
                     <div>Convert 7562<sub>10</sub> to hex</div>
                     <div>7562 &#247; 16  = 472 remainder 10 (A)</div>
@@ -547,6 +550,7 @@
     <script type="text/javascript" src="./js/codeData.js"></script>
     <script type="text/javascript" src="./js/global-functions.js"></script>
     <script type="text/javascript" src="./js/cookiesInfo.js"></script>
+    <script type="text/javascript" src="./js/number-convert.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
     <script type="text/javascript" src="./js/table.js"></script>
 </body>
