--- a/public/forms.html
+++ b/public/forms.html
@@ -77,6 +77,9 @@
                         <li>
                         <a class="dropdown-item" href="./forms.html">Forms</a>
                         </li>
+                        <li>
+                            <a class="dropdown-item" href="./mochaTest.html">Mocha</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
