--- a/math.html
+++ b/math.html
@@ -212,7 +212,7 @@
                                 </div>
                                 <div class="input-group">
                                     <label for="input" class="text-left w-100 pl-3 mt-2 label-input-number">Result:</label>
-                                    <input type="text" class="form-control input-factorial-result" placeholder="Result" disabled readonly>
+                                    <textarea class="form-control input-factorial-result" id="exampleFormControlTextarea3" placeholder="Result" disabled readonly rows="3"></textarea>
                                 </div>
                             </div>
                         </form>
@@ -289,7 +289,8 @@
                                 </div>
                                 <div class="input-group">
                                     <label for="input" class="text-left w-100 pl-3 mt-2 label-input-number">Result:</label>
-                                    <input type="text" class="form-control input-fibonacci-result" placeholder="Result" disabled readonly>
+                                    
+                                    <textarea class="form-control input-fibonacci-result" id="exampleFormControlTextarea4" placeholder="Result" disabled readonly rows="3"></textarea>
                                 </div>
                             </div>
                         </form>
