--- a/public/carousel.html
+++ b/public/carousel.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="description" content="Number Convertor">
+    <meta name="author" content="RAIDERS">
 
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
