--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="description" content="Number Convertor">
+    <meta name="author" content="RAIDERS">
 
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
@@ -25,7 +28,6 @@
     <link rel="stylesheet" href="./bootstrap-resource/mdb.min.css">
    
     <link rel="text/javascript" href="https://free.currencyconverterapi.com/api/v4/convert?q=GBP_EUR&compact=ultra">
-
 </head>
 
 <body>
